# queuetube-whisper-transcriber

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  celery_app.py  config.py  db.py  download_processor.py  models.py  schemas.py  transcribe_tools.py  transcription_processor.py  transcription_watcher.py  whisper_transcriber.py  yt_channel_dl.py
app/services/: jobs.py
frontend/: .gitignore  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: JobCard.tsx  JobTimeline.tsx  StatPill.tsx
frontend/lib/: api.ts  types.ts
frontend/pages/: index.js  index.module.css
frontend/tests/: HomePage.test.tsx
frontend/tests/e2e/: queue.spec.ts
tests/: conftest.py  test_api_job_events.py  test_api_jobs.py  test_api_list_jobs.py
