[tool.poetry]
name = "whisper-transcriber-api"
version = "0.1.0"
description = "Download YouTube videos using yt-dlp, Celery, and Redis, transcriber with OpenAI whisper"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
openai = "^0.27.5"
colorlog = "^6.7.0"
celery = "^5.2.7"
whispercpp = "^0.0.17"
numpy = "^1.24.3"
ffmpeg-python = "^0.2.0"
pytest-mock = "^3.10.0"
tenacity = "^8.2.2"
yt-dlp = "^2023.3.4"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
watchdog = "^3.0.0"
redis = "^4.5.4"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
mypy = "^1.2.0"
black = "^23.3.0"
debugpy = "^1.6.7"
pylint = "^2.17.3"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
transcribe = "main:main"
