[project]
name = "queuetube-whisper-transcriber"
version = "0.2.0"
description = "Download YouTube videos and transcribe them with faster-whisper."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sean Dearnaley" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "yt-dlp>=2024.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy>=2.0.30",
  "faster-whisper>=1.1.0",
  "python-multipart>=0.0.9",
  "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.12.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
